metadata/force-app/main/default/objects/CustomName_TVGbr__c/CustomName_TVGbr__c.object-meta.xml
<CustomObject>
    <description>Description_uBIPL</description>
    <label>CustomLabel_ExPQp</label>
    <nameField>
        <label>CustomLabel_ExPQp</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ExPQps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>