metadata/force-app/main/default/objects/CustomName_TVGbr__c/fields/CustomField_hesUX__c.field-meta.xml
<CustomField>
    <fullName>CustomField_hesUX__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwZmPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>