metadata/force-app/main/default/objects/CustomName_TVGbr__c/fields/CustomField_kfNiN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kfNiN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWzNHp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>